piroll: fix collapsable footer

--- a/practicing-making-webpages/piroll/src/blocks/footline/_footline.scss
+++ b/practicing-making-webpages/piroll/src/blocks/footline/_footline.scss
@@ -4,6 +4,6 @@
   background-color: $footline-bg;
   box-sizing: border-box;
   display: flex;
-  flex-flow: column nowrap;
+  justify-content: center;
   min-width: 100%;
 }
